--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,127 @@
+@font-face {
+  font-family:Slack-Lato;
+  font-style:normal;
+  font-weight:300;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-light-0b50f74.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-light-1475c14.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:Slack-Lato;
+  font-style:normal;
+  font-weight:400;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-regular-d9ce515.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-regular-ea6d1e4.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:Slack-Lato;
+  font-style:normal;
+  font-weight:700;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-bold-4b1dc11.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-bold-a532381.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:Slack-Lato;
+  font-style:normal;
+  font-weight:900;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-black-b64f5e4.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-black-8857ce8.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:Slack-Lato;
+  font-style:italic;
+  font-weight:300;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-italic-light-c593311.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-italic-light-354fb58.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:Slack-Lato;
+  font-style:italic;
+  font-weight:400;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-italic-5bbcd6c.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-italic-d5261ac.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:Slack-Lato;
+  font-style:italic;
+  font-weight:700;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-italic-bold-99def7d.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-italic-bold-2187a11.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:Slack-Lato;
+  font-style:italic;
+  font-weight:900;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-italic-black-04aca50.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/lato-italic-black-23c1971.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:NotoSansJP;
+  font-style:normal;
+  font-weight:400;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/NotoSansJP-Regular.min-5096b76.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/NotoSansJP-Regular.min-ecc316e.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:NotoSansJP;
+  font-style:normal;
+  font-weight:700;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/NotoSansJP-Bold.min-7f00be9.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/NotoSansJP-Bold.min-19155cc.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:NotoSansJP;
+  font-style:normal;
+  font-weight:900;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/NotoSansJP-Bold.min-7f00be9.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/NotoSansJP-Bold.min-19155cc.woff) format("woff");
+
+ }
+ @font-face {
+  font-family:Slack-Larsseit;
+  font-style:normal;
+  font-weight:700;
+  src:local("\263A"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/larsseit-bold-0b91251.woff2) format("woff2"),
+  url(https://a.slack-edge.com/bv1-8-5f8a604/larsseit-bold-12559a0.woff) format("woff");
+
+ }
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Slack-Lato', 'Roboto', 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  font-weight: 400;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  padding: 0;
+  margin: 0;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
