Add - App container

--- a/src/component/SendMessage/SendMessage.css
+++ b/src/component/SendMessage/SendMessage.css
@@ -1,5 +1,8 @@
 .SendMessage {
   display: flex;
+  position: fixed;
+  top: 90vh;
+  width: 70vw;
   justify-content: space-between;
   align-items: center;
   border: 2px solid #CBCED1;
