--- a/src/component/Menu/Menu.css
+++ b/src/component/Menu/Menu.css
@@ -1,10 +1,6 @@
 .Menu {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 4px;
-  background-color: #2F343D;
-}
-
-.Menu *:not(:first-child) {
-  margin-left: 10px;
 }
