--- a/src/component/SendMessage/SendMessage.css
+++ b/src/component/SendMessage/SendMessage.css
@@ -7,6 +7,7 @@
   align-items: center;
   border: 2px solid #CBCED1;
   border-radius: 3px;
+  background-color: #ffffff;
 }
 
 .SendMessage-input {
