Add - add new room

--- a/src/component/Menu/Menu.css
+++ b/src/component/Menu/Menu.css
@@ -4,3 +4,13 @@
   justify-content: space-between;
   padding: 4px;
 }
+
+.Menu-account,
+.Menu-search, 
+.Menu-public, 
+.Menu-list, 
+.Menu-sort,
+.Menu-create,
+.Menu-more {
+  cursor: pointer;
+}
