Fix issue - mentor coderX

--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -83,3 +83,10 @@
 .Signup-form-link a:hover {
   text-decoration: underline;
 }
+
+.Signup-form-group > p {
+  color: #f18912;
+  font-weight: 500;
+  font-style: italic;
+  font-size: 12px;
+}
