--- a/src/index.css
+++ b/src/index.css
@@ -126,3 +126,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*:focus {
+  outline-width: 0;
+}
